--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,10 +2,8 @@ spring.datasource.url       = jdbc:mysql://localhost:3306/small_booking_app?useS
 spring.datasource.username  = root
 spring.datasource.password  =
 
-## Hibernate Properties
-# The SQL dialect makes Hibernate generate better SQL for the chosen database
-spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
-
-# Hibernate ddl auto (create, create-drop, validate, update)
-spring.jpa.hibernate.ddl-auto = update
-spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect         = org.hibernate.dialect.MySQL5Dialect
+spring.jpa.hibernate.ddl-auto                   = update
+spring.jpa.show-sql                             = true
+spring.jpa.properties.hibernate.format_sql      = true
+spring.jpa.hibernate.naming.physical-strategy   = org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
