--- a/pom.xml
+++ b/pom.xml
@@ -48,6 +48,13 @@
 			<groupId>mysql</groupId>
 			<artifactId>mysql-connector-java</artifactId>
 		</dependency>
+
+		<!-- https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-actuator -->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-actuator</artifactId>
+		</dependency>
+
 	</dependencies>
 
 	<build>
@@ -56,6 +63,33 @@
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
+
+			<!--<plugin>-->
+				<!--<groupId>org.bsc.maven</groupId>-->
+				<!--<artifactId>maven-processor-plugin</artifactId>-->
+				<!--<version>2.2.4</version>-->
+				<!--<executions>-->
+					<!--<execution>-->
+						<!--<id>process</id>-->
+						<!--<goals>-->
+							<!--<goal>process</goal>-->
+						<!--</goals>-->
+						<!--<phase>generate-sources</phase>-->
+						<!--<configuration>-->
+							<!--<processors>-->
+								<!--<processor>org.hibernate.jpamodelgen.JPAMetaModelEntityProcessor</processor>-->
+							<!--</processors>-->
+						<!--</configuration>-->
+					<!--</execution>-->
+				<!--</executions>-->
+				<!--<dependencies>-->
+					<!--<dependency>-->
+						<!--<groupId>org.hibernate</groupId>-->
+						<!--<artifactId>hibernate-jpamodelgen</artifactId>-->
+						<!--<version>4.3.6.Final</version>-->
+					<!--</dependency>-->
+				<!--</dependencies>-->
+			<!--</plugin>-->
 		</plugins>
 	</build>
 
