--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-spring.datasource.url       = jdbc:mysql://localhost:3306/small_booking_app?useSSL=false
-spring.datasource.username  = root
-spring.datasource.password  =
+spring.datasource.url       = ${JDBC_DATABASE_URL}
+spring.datasource.username  = ${JDBC_DATABASE_USERNAME}
+spring.datasource.password  = ${JDBC_DATABASE_PASSWORD}
 
 spring.jpa.properties.hibernate.dialect         = org.hibernate.dialect.MySQL5Dialect
 spring.jpa.hibernate.ddl-auto                   = update
