--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,10 @@
-spring.datasource.url       = ${JDBC_DATABASE_URL}
-spring.datasource.username  = ${JDBC_DATABASE_USERNAME}
-spring.datasource.password  = ${JDBC_DATABASE_PASSWORD}
+#spring.datasource.url       = ${JDBC_DATABASE_URL}
+#spring.datasource.username  = ${JDBC_DATABASE_USERNAME}
+#spring.datasource.password  = ${JDBC_DATABASE_URL}
+
+spring.datasource.url       = jdbc:postgresql://localhost:5432/small_booking_app
+spring.datasource.username  = postgres
+spring.datasource.password  = postgres
 
 spring.jpa.properties.hibernate.dialect         = org.hibernate.dialect.MySQL5Dialect
 spring.jpa.hibernate.ddl-auto                   = update
